<resources>
    <string name="app_name">Test</string>
    <string name="login">Se connecter</string>
    <string name="plots">Parcelles</string>
    <string name="settings">Paramètres</string>
    <string name="start">commencer</string>
    <string name="retry">réessayer</string>
    <string name="empty">Vide</string>
    <string name="logout">Se déconnecter</string>
    <string name="close">Fermer</string>
    <string name="host">Host</string>
    <string name="host_example">Ex: 192.168.1.5</string>
    <string name="port">Port</string>
    <string name="example_port">Ex: 3000</string>
    <string name="confirm">Confirmer</string>
    <string name="connect">Connexion</string>
    <string name="save">enregistrer</string>
    <string name="send">Envoyer</string>
    <string name="water_qte">Quantité d\'eau demandé</string>
    <string name="type">Type de culture</string>
    <string name="plot">Parcelle</string>
    <string name="area">Superficie</string>
    <string name="sowing_date">Date de semis</string>
    <string name="need">Besoin</string>
    <string name="yield">Rendement</string>
    <string name="profit">Profit</string>
    <string name="estimate">Estimation</string>
    <string name="modify">modifier</string>
    <string name="delete">supprimer</string>

    <string name="toast_launch_failed">Impossible de lancer le service</string>
    <string name="toast_login_failed">Connexion échouée</string>
    <string name="toast_invalid_type">Type invalide</string>
    <string name="toast_invalid_name">Nom invalide</string>
    <string name="toast_invalid_area">Supérficie invalide</string>
    <string name="toast_invalid_date">Date invalide</string>
    <string name="toast_invalid_qte">Quantité d\'eau invalide</string>
    <string name="toast_modifications_saved">Modifications enregistrées</string>
    <string name="toast_proposal_sent">Proposition envoyée</string>
    <string name="toast_invalid_host">Host invalide</string>
    <string name="toast_invalid_port">Port invalide</string>
    <string name="toast_error">Erreur</string>
    <string name="toast_invalid_fname">Prénom invalide</string>
    <string name="toast_invalid_lname">Nom invalide</string>
    <string name="toast_invalid_number">Numéro d\'agriculteur invalid</string>
    <string name="toast_invalid_pass">Mot de passe invalide</string>
    <string name="toast_account_created">Compte crée</string>
    <string name="toast_no_plot">Aucune parcelle n\'a été sélectionnée</string>
    <string name="toast_plot_sent">La parcelle a été envoyée au gestionnaire</string>
    <string name="toast_plot_deleted">La parcelle a été supprimée</string>
    <string name="toast_negotiating">La parcelle est en cours de négociation</string>
    <string name="register">S\'inscrire</string>
    <string name="farmer_num">Numéro d\'agriculteur</string>
    <string name="supervisor_num">Numéro de superviseur</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="password">mot de passe</string>
    <string name="take_risk">Je prends le risque</string>
    <string name="network_error">Erreur de connexion</string>
    <string name="farmer">Agriculteur</string>
    <string name="supervisor">Superviseur</string>
    <string name="refuse">refuser</string>
    <string name="accept">accepter</string>
    <string name="original">Originale</string>
    <string name="proposed">Proposée</string>
    <string name="cancel">Annuler</string>
    <string name="delete_plot">Supprimer la parcelle?</string>
    <string name="alert">Alerte</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="propose">proposer</string>
    <string name="toast_negotiation_canceled">La négociation a été annulée</string>
    <string name="toast_new_proposal">Une proposition a été reçue</string>
    <string name="toast_plan_accepted">Le plan a été accepté</string>
    <string name="toast_dotation_saved">La dotation a été affectée</string>
    <string name="toast_enter_dotation">Entrer une dotation</string>
    <string name="dotation">Dotation</string>

</resources>
